<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/appearence_1_title">

        <SwitchPreference
            android:defaultValue="true"
            android:key="font"
            android:summary="@string/pref_font_summary"
            android:title="@string/pref_font" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/appearence_2_title">
        <SwitchPreference
            android:defaultValue="true"
            android:key="swipe_to_refresh"
            android:summary="@string/pref_swipe_to_refresh_summary"
            android:title="@string/pref_swipe_to_refresh" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="circle_progress"
            android:summary="@string/pref_circle_progress_summary"
            android:title="@string/pref_circle_progress" />
    </PreferenceCategory>

</PreferenceScreen>
