<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_home"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh"
        android:title="@string/menu_refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_dekstop"
        android:title="@string/menu_dekstop"
        android:icon="@drawable/ic_desktop"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_incognito"
        android:title="@string/menu_incognito"
        android:icon="@drawable/ic_incognito"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add"
        android:title="@string/menu_add"
        android:icon="@drawable/ic_add"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:title="@string/menu_share"
        android:icon="@drawable/ic_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_perms"
        android:title="@string/menu_perms"
        android:icon="@drawable/ic_permissions"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never" />

</menu>