<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_open_new"
        android:icon="@drawable/ic_open"
        android:title="@string/menu_open_new"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share_bookmark"
        android:icon="@drawable/ic_share_bookmark"
        android:title="@string/menu_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rename_bookmark"
        android:icon="@drawable/ic_rename_bookmark"
        android:title="@string/menu_rename"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_bookmark"
        android:icon="@drawable/ic_delete_bookmark"
        android:title="@string/menu_delete"
        app:showAsAction="never" />

</menu>